fix: adjust aligmnent and spacing

--- a/src/components/Radio/Radio.module.css
+++ b/src/components/Radio/Radio.module.css
@@ -8,6 +8,7 @@
 .radio {
   display: flex;
   gap: calc(var(--eds-spacing-size-1) * 1px);
+  align-items: center;
 }
 
 /**
